Added Selfie steps + Selfie location enabling

--- a/react_webviews/src/kyc/Upload/commonStyles.scss
+++ b/react_webviews/src/kyc/Upload/commonStyles.scss
@@ -239,8 +239,74 @@
 }
 
 .kyc-selfie-intructions {
-  font-size: 13px;
-  line-height: 21px;
-  color: var(--dark);
   margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  #kyc-si-text {
+    font-size: 13px;
+    line-height: 21px;
+    color: var(--dark);
+  }
+}
+
+.kyc-loc-permission {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .kyc-loc-perm-icon {
+    background: var(--highlight);
+    border-radius: 20px;
+    margin-top: 20px;
+    width: 116px;
+    height: 116px;
+    position: relative;
+
+    img {
+      height: 55px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+  
+  .kyc-loc-perm-title {
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 32px;
+    text-align: center;
+    color: var(--dark);
+    margin-top: 20px;
+  }
+  
+  .kyc-loc-perm-subtitle {
+    font-size: 13px;
+    line-height: 21px;
+    text-align: center;
+    color: var(--steelgrey);
+    margin: 20px 0;
+  }
+}
+
+.selfie-step:nth-child(1) {
+  margin-top: 20px;
+}
+
+.selfie-step {
+  margin-top: 40px;
+
+  .selfie-step-desc {
+    font-size: 13px;
+    line-height: 15px;
+    color: var(--dark);
+    margin-bottom: 10px;
+  }
+
+  .selfie-step-imgs {
+    display: flex;
+    justify-content: space-between;
+  }
 }
