--- a/react_webviews/src/kyc/Upload/commonStyles.scss
+++ b/react_webviews/src/kyc/Upload/commonStyles.scss
@@ -251,27 +251,40 @@
   }
 }
 
+.kyc-selfie-location-dialog {
+  .MuiDialog-paper {
+    margin: 0 !important;
+  }
+  .MuiDialogActions-root {
+    margin: 20px !important;
+  }
+}
+
 .kyc-loc-permission {
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  .kyc-loc-perm-icon {
-    background: var(--highlight);
-    border-radius: 20px;
-    margin-top: 20px;
-    width: 116px;
-    height: 116px;
-    position: relative;
-
-    img {
-      height: 55px;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+  .kyc-loc-perm-illustration {
+    margin-top: 80px;
+    
+    .kyc-loc-perm-icon {
+      background: var(--highlight);
+      border-radius: 20px;
+      width: 116px;
+      height: 116px;
+      position: relative;
+  
+      img {
+        height: 55px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
     }
   }
+
   
   .kyc-loc-perm-title {
     font-weight: bold;
