minor fix and css change

--- a/react_webviews/src/kyc_esign/components/Style.scss
+++ b/react_webviews/src/kyc_esign/components/Style.scss
@@ -130,8 +130,8 @@ $text-color2: #8D879B;
     }
 
     .title {
-      font-size: 15px;
-      color: #160d2e;
+      font-size: 20px;
+      color: var(--dark);
       font-weight: 700;
     }
 
