Added communication callback

--- a/react_webviews/src/kyc/Equity/components/commonStyles.scss
+++ b/react_webviews/src/kyc/Equity/components/commonStyles.scss
@@ -354,6 +354,7 @@ $generic-subtitle-margin-top: -10px;
       font-weight: normal;
       font-size: 13px;
       text-transform: initial;
+      text-decoration: none;
 
       img {
         width: 18px;
