--- a/react_webviews/src/kyc/Upload/commonStyles.scss
+++ b/react_webviews/src/kyc/Upload/commonStyles.scss
@@ -144,26 +144,11 @@
       font-size: 12px;
       line-height: 14px;
       font-weight: bold;
-      justify-content: flex-end !important;
-      margin: 5px 0 0;
+      min-width: 112px;
+      text-align: right;
       cursor: pointer;
     }
   }
-
-  // .doc-upload-note-row {
-  //   margin-top: 40px;
-  //   @include d-flex-space-between();
-  //   column-gap: 20px;
-
-  //   .upload-note {
-  //     max-width: 70%;
-  //     text-align: left;
-  //   }
-
-  //   .know-more-button {
-  //     justify-content: flex-end !important;
-  //   }
-  // }
 }
 
 #kyc-upload-address {
