--- a/react_webviews/src/kyc/Upload/commonStyles.scss
+++ b/react_webviews/src/kyc/Upload/commonStyles.scss
@@ -94,6 +94,7 @@
     margin-top: -15px;
     font-size: 13px;
     line-height: 21px;
+    margin-bottom: 20px;
   }
 
   .pan-alert {
@@ -266,4 +267,21 @@
 
 .align-left {
   text-align: left;
+}
+
+.kuc-sign-image-container {
+  position: relative;
+  border-radius: 6px;
+  background-color: white;
+  margin-bottom: 5px;
+
+  .kuc-sign-image {
+    height: 130px;
+    width: 152px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-bottom: 0;
+  }
 }
