Fixed hide knowHow in withdraw tax summary

--- a/react_webviews/src/withdraw/mini-components/mini-components.scss
+++ b/react_webviews/src/withdraw/mini-components/mini-components.scss
@@ -123,6 +123,7 @@
     font-size: 10px;
     align-items: center;
     line-height: 1.5;
+    margin-top: 20px;
   }
 
   .summary-bottom-info .tax-summary-know-more {
