--- a/react_webviews/src/kyc/BankKyc/KycUploadDocuments.scss
+++ b/react_webviews/src/kyc/BankKyc/KycUploadDocuments.scss
@@ -195,3 +195,21 @@
     margin: 20px 0 40px 0;
   }
 }
+
+.kuc-sign-image-container {
+  position: relative;
+  border-radius: 6px;
+  background-color: white;
+  margin-bottom: 5px;
+
+  .kuc-sign-image {
+    height: 130px;
+    width: 152px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-bottom: 0;
+  }
+}
+
