Modified sdk landing bg color

--- a/react_webviews/src/dashboard/Invest/components/SdkLanding/SdkLanding.scss
+++ b/react_webviews/src/dashboard/Invest/components/SdkLanding/SdkLanding.scss
@@ -34,9 +34,9 @@
 }
 
 .sdk-background{
-  background: #f3f4f6 !important;
+  background: #ffffff !important;
   .header-title-page{
-    background: #f3f4f6 !important;
+    background: #ffffff !important;
   }
 }
 .sdk-header{
