--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1307,6 +1307,7 @@ padding-right: 12px !important;
       width: 36px;
       height: 36px;
       object-fit: cover;
+      background-color: #fff;
       align-self: flex-start;
     }
     .heading-left{
