--- a/react_webviews/src/group_insurance/common/Style.scss
+++ b/react_webviews/src/group_insurance/common/Style.scss
@@ -563,7 +563,7 @@
   list-style-type: none;
   padding: 0;
   font-family: 'Rubik', sans-serif;
-  margin: 30px -20px 20px -20px;
+  margin: 30px -20px 0 -20px;
   display: flex;
   justify-content: space-between;
   cursor: pointer;
@@ -622,12 +622,14 @@
   cursor: pointer;
 }
 .report-top-text{
+  @media only screen and (min-width: 500px){
+    margin-top: 60px;
+  } 
   text-align: left;
   color: #767E86;
   font-family: 'Rubik', sans-serif;
-  margin: 0 0 30px 0;
   font-size: 13px;
-  margin: 0 20px 30px 20px;
+  margin: 20px 20px 30px 20px;
 }
 }
 .report-detail-header {
