--- a/react_webviews/src/kyc/Equity/mini-components/mini-components.scss
+++ b/react_webviews/src/kyc/Equity/mini-components/mini-components.scss
@@ -95,3 +95,26 @@ $subtitle-color: #767E86;
     color: #767e86;
   }
 }
+
+.communication-details-otp-container {
+  .cd-otp-time-text {
+    color: var(--steelgrey);
+    font-size: 13px;
+    line-height: 21px;
+    margin: 30px 0 12px;
+  }
+
+  .cd-otp-resend-text {
+    margin: 20px 0 0 0;
+    color: var(--secondary);
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 1px;
+
+    .cd-resend-loader {
+      margin-left: 20px;
+    }
+  }
+}
