minor css fixes

--- a/react_webviews/src/kyc/Journey/Journey.scss
+++ b/react_webviews/src/kyc/Journey/Journey.scss
@@ -136,6 +136,9 @@
     text-transform: uppercase;
     justify-self: flex-end;
     cursor: pointer;
+    font-weight: bold;
+    letter-spacing: 1px;
+    font-size: 12px;
   }
 
   .field_key {
