--- a/react_webviews/src/kyc/Equity/components/commonStyles.scss
+++ b/react_webviews/src/kyc/Equity/components/commonStyles.scss
@@ -325,6 +325,7 @@ $generic-subtitle-margin-top: -10px;
             line-height: 14px;
             letter-spacing: 1px;
             text-transform: uppercase;
+            margin-right: 10px;
           }
         }
         
