--- a/react_webviews/src/kyc/Upload/commonStyles.scss
+++ b/react_webviews/src/kyc/Upload/commonStyles.scss
@@ -161,6 +161,7 @@
     column-gap: 10px;
     color: var(--dark);
     font-weight: 500;
+    margin-top: -10px;
 
     .edit {
       color: var(--secondary);
