--- a/react_webviews/src/dashboard/AccountMerge/AccountMerge.scss
+++ b/react_webviews/src/dashboard/AccountMerge/AccountMerge.scss
@@ -8,13 +8,13 @@
 
   .auth-info {
     display: flex;
-    column-gap: 20px;
     margin-top: 50px;
     border: 1px dashed;
     padding: 10px 0;
 
     img {
       padding-left: 20px;
+      margin-right: 20px
     }
   }
 }
