--- a/react_webviews/src/dashboard/Invest/components/InstaRedeem/Amount.scss
+++ b/react_webviews/src/dashboard/Invest/components/InstaRedeem/Amount.scss
@@ -12,7 +12,6 @@
   .tags {
     display: flex;
     flex-wrap: wrap;
-    column-gap: 10px;
     padding: 10px 0;
 
     .tag {
@@ -23,7 +22,7 @@
       cursor: pointer;
       color: var(--secondary);
       border: 1px solid var(--secondary);
-      margin-bottom: 10px;
+      margin: 0 10px 10px 0;
     }
   }
 }
