--- a/react_webviews/src/dashboard/Invest/mini-components/mini-components.scss
+++ b/react_webviews/src/dashboard/Invest/mini-components/mini-components.scss
@@ -182,7 +182,6 @@
   
     .type {
       display: flex;
-      column-gap: 20px;
       margin-top: 30px;
   
       .content {
@@ -194,6 +193,7 @@
         box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
         cursor: pointer;
         min-height: 60px;
+        margin-right: 20px;
   
         img {
           width: 100%;
@@ -207,6 +207,10 @@
           font-size: 15px;
           font-weight: 600;
         }
+      }
+
+      .content:last-child {
+        margin-right: 0;
       }
     }
 }
