--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -1744,6 +1744,17 @@ $header-title-font-size: 20px;
   }
 }
 
+.header-skip-text {
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: var(--steelgrey);
+  display: inline-block;
+  margin-right: 12px;
+}
+
 .mobile-navbar-menu{
   margin-left: auto;
 }
