Fixes for F&O Income Proof

--- a/react_webviews/src/kyc/Upload/commonStyles.scss
+++ b/react_webviews/src/kyc/Upload/commonStyles.scss
@@ -461,6 +461,10 @@
   .kyc-fi-expand-options::before {
     display: none;
   }
+
+  .kyc-fi-file-upload-input {
+    margin-top: 20px;
+  }
 }
 
 .kyc-fno-encryption-disclaimer {
