add new asset and modified condition to get pending docs

--- a/react_webviews/src/kyc/Equity/components/commonStyles.scss
+++ b/react_webviews/src/kyc/Equity/components/commonStyles.scss
@@ -235,6 +235,8 @@ $generic-subtitle-margin-top: -10px;
 }
 
 .kyc-document-verification {
+  margin-bottom: 50px;
+  
   .kyc-document-verification-header {
     display: flex;
     align-items: flex-start;
