--- a/react_webviews/src/kyc/Equity/mini-components/mini-components.scss
+++ b/react_webviews/src/kyc/Equity/mini-components/mini-components.scss
@@ -36,7 +36,6 @@ $subtitle-color: #767E86;
   .kyc-selfie-upload-status-content {
     .kyc-selfie-upload-status-info {
       display: flex;
-      column-gap: 20px;
       justify-content: space-between;
       align-items: flex-start;
 
@@ -55,6 +54,10 @@ $subtitle-color: #767E86;
         width: 95%;
         color: #767e86;
         padding-bottom: 35px;
+      }
+
+      img {
+        margin-left: 20px;
       }
     }
 
