Header Arrow Color Changing prop + indexFunds Landing page update

--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -1951,3 +1951,8 @@ $header-title-font-size: 20px;
     }
   }
 }
+
+.header-color-red{
+  background-color: #002576 !important;
+  color: white !important;
+}
