Added FundListCard + YearFilter to FundList Page

--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -1951,8 +1951,7 @@ $header-title-font-size: 20px;
     }
   }
 }
-
-.header-color-red{
+.header-color-blue{
   background-color: #002576 !important;
   color: white !important;
 }
