--- a/react_webviews/src/common/ui/Filter/commonStyles.scss
+++ b/react_webviews/src/common/ui/Filter/commonStyles.scss
@@ -34,6 +34,7 @@
     .title {
       .notselected {
         background-color: transparent !important;
+        color: #767E86;
       }
       background-color: transparent !important;
       background-image: linear-gradient(
