--- a/react_webviews/src/dashboard/PassiveIndexFunds/components/PassiveFundDetails.scss
+++ b/react_webviews/src/dashboard/PassiveIndexFunds/components/PassiveFundDetails.scss
@@ -14,7 +14,7 @@
     line-height: 32px;
     letter-spacing: 0px;
     color: #160d2e;
-    padding-bottom: 10px;
+    // padding-bottom: 10px;
   }
   .pfd-info {
     font-size: 11px;
