--- a/react_webviews/src/dashboard/PassiveIndexFunds/mini-components/commonStyles.scss
+++ b/react_webviews/src/dashboard/PassiveIndexFunds/mini-components/commonStyles.scss
@@ -1,124 +1,122 @@
 // Passive Fund Chart Styles
-.tooltip-container{
-    background-color: #fff;
-    padding: 10px 10px;
-    border-radius: 4px;
-  }
-  .date {
-    text-align: center;
-  }
-  .dot {
-    background-color: #7ed321;
-    width: 8px;
-    height: 8px;
-    border-radius: 50%;
-    align-self: center;
-    margin-right: 5px !important;
-  }
-  .next-line-container {
-    display: flex;
-    align-items: center;
-  }
-  .date {
-    font-size: 10px;
-    font-weight: 500;
-    line-height: 16px;
-    letter-spacing: 1px;
-    text-align: center;
-    color: #767e86;
-    padding: 0;
-    margin: 0;
-  }
+.tooltip-container {
+  background-color: #fff;
+  padding: 10px 10px;
+  border-radius: 4px;
+}
+.date {
+  text-align: center;
+}
+.dot {
+  background-color: #7ed321;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  align-self: center;
+  margin-right: 5px !important;
+}
+.next-line-container {
+  display: flex;
+  align-items: center;
+}
+.date {
+  font-size: 10px;
+  font-weight: 500;
+  line-height: 16px;
+  letter-spacing: 1px;
+  text-align: center;
+  color: #767e86;
+  padding: 0;
+  margin: 0;
+}
+.content {
+  font-size: 13px;
+  line-height: 20px;
+  font-weight: 400;
+  letter-spacing: 0px;
+  color: #161a2e;
+  padding: 0;
+  margin: 0;
+}
+.xaxis-label {
+  font-size: 9px;
+  font-weight: 600;
+  line-height: 9px;
+  letter-spacing: 0px;
+  fill: #767e86;
+  opacity: 0.5;
+}
+.yaxis-label {
+  font-size: 9px;
+  font-weight: 600;
+  line-height: 9px;
+  letter-spacing: 0px;
+  text-align: right;
+  fill: #767e86;
+  opacity: 0.5;
+}
+
+//Passive Funds List Style
+
+.funds-card {
+  min-height: 215px !important;
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.05);
+  border-radius: 0px !important;
+}
+
+.funds-card-details {
+  display: flex;
+  justify-content: space-between;
+  cursor: pointer;
+  padding-right: 0;
+
   .content {
+    flex: 9;
+    .title {
+      font-size: 16px;
+      color: #160d2e;
+      font-weight: 600;
+    }
+
+    .subtitle {
+      color: #8d879b;
+      font-size: 14px;
+      margin: 20px 0 20px 0;
+    }
+  }
+
+  .image-wrapper {
+    flex: 3;
+    img {
+      width: 128px;
+    }
+  }
+
+  .split-img {
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+  .tc-title {
+    color: #767e86;
+    font-size: 12px;
+    line-height: 16px;
+    font-weight: 500;
+    margin: 0 0 7px 0;
+    font-family: Rubik;
+    font-style: normal;
+  }
+  .tc-subtitle {
+    color: #0a1d32;
+    font-size: 20px;
+    font-weight: 500;
+  }
+  .return {
+    color: #7ed321 !important;
+    line-height: 21px;
     font-size: 13px;
-    line-height: 20px;
-    font-weight: 400;
-    letter-spacing: 0px;
-    color: #161a2e;
-    padding: 0;
-    margin: 0;
+    font-weight: bold;
   }
-  .xaxis-label {
-    font-size: 9px;
-    font-weight: 600;
-    line-height: 9px;
-    letter-spacing: 0px;
-    fill: #767e86;
-    opacity: 0.5;
-  }
-  .yaxis-label {
-    font-size: 9px;
-    font-weight: 600;
-    line-height: 9px;
-    letter-spacing: 0px;
-    text-align: right;
-    fill: #767e86;
-    opacity: 0.5;
-  }
-  
-
-  //Passive Funds List Style
-
-  .funds-card{
-    min-height: 215px !important;
-    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.05);
-    border-radius: 0px !important;
-  }
-
-  .funds-card-details{
-    display: flex;
-    justify-content: space-between;
-    cursor: pointer;
-    padding-right: 0;
-
-    .content {
-      flex: 9;
-      .title {
-        font-size: 16px;
-        color: #160d2e;
-        font-weight: 600;
-      }
-
-      .subtitle {
-        color: #8D879B;
-        font-size: 14px;
-        margin: 20px 0 20px 0;
-      }
-    }
-
-    .image-wrapper {
-      flex: 3;
-      img {
-        width: 128px;
-      }
-    }
-
-    .split-img{
-      margin-left: 5px;
-      margin-right: 5px;
-    }
-    .tc-title {
-      color: #767E86;
-      font-size: 12px;
-      line-height: 16px;
-      font-weight: 500;
-      margin: 0 0 7px 0;
-      font-family: Rubik;
-      font-style: normal;
-    }
-    .tc-subtitle {
-      color: #0A1D32;
-      font-size: 20px;
-      font-weight: 500;
-    }
-    .return{
-      color: #7ED321 !important;
-      line-height: 21px;
-      font-size: 13px;
-      font-weight: bold;
-    }
-  }
-
+}
 
 .fundlist-data {
   display: flex;
@@ -133,22 +131,119 @@
   cursor: pointer;
   margin: 0 auto;
 
-.text-block {
-  width: 36px;
-  height: 24px;
-  background-color: #F0F7FF;
-  color: #767E86;
-  padding-top: 4px;
-  border-radius: 4px;
+  .text-block {
+    width: 36px;
+    height: 24px;
+    background-color: #f0f7ff;
+    color: #767e86;
+    padding-top: 4px;
+    border-radius: 4px;
+  }
+
+  .selected {
+    color: #ffffff !important;
+    background-color: #3792fc !important;
+  }
+
+  p {
+    text-align: center !important;
+  }
 }
 
-.selected {
-  color: #FFFFFF !important;
-  background-color: #3792FC !important;
+// Active Passive Carousel
+.active-passive-carousel {
+  background-image: url("../../../assets/active_passive_background.svg");
+  width: 100%;
+  object-fit: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding: 20px 10px;
+  .image {
+    display: flex;
+    justify-content: center;
+    img {
+      width: 40px;
+      height: 40px;
+    }
+  }
+  .header {
+    text-align: center;
+    font-size: 13px;
+    font-weight: 700;
+    line-height: 21px;
+    letter-spacing: 0px;
+    color: #0a1d32;
+  }
+  .body {
+    display: flex;
+    justify-content: space-around;
+    padding-top: 25px;
+    .left {
+      width: 40%;
+      .left-title {
+        text-align: center;
+        font-size: calc(10px + 0.2vw);
+        font-weight: 600;
+        line-height: 16px;
+        letter-spacing: 1px;
+        color: #161a2e;
+      }
+      .content {
+        text-align: left;
+        font-size: 13px;
+        font-weight: 400;
+        line-height: 21px;
+        letter-spacing: 0px;
+        color: #767e86;
+      }
+    }
+    .right {
+      width: 40%;
+      .right-title {
+        text-align: center;
+        font-size: calc(10px + 0.2vw);
+        font-weight: 600;
+        line-height: 16px;
+        letter-spacing: 1px;
+        color: #4d890d;
+      }
+      .content {
+        text-align: left;
+        font-size: 13px;
+        font-weight: 400;
+        line-height: 21px;
+        letter-spacing: 0px;
+        color: #767e86;
+      }
+    }
+  }
 }
-
-p {
-  text-align: center !important;
-}
-
+// Key Insights Carousel
+.key-insight-carousel {
+  background-image: url("../../../assets/passiveFundKeyInsights.svg");
+  width: 100%;
+  object-fit: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding: 20px 20px;
+  .title {
+    font-size: 15px;
+    font-weight: 600;
+    line-height: 24px;
+    letter-spacing: 0px;
+    color: #0a1d32;
+    margin-bottom: 10px;
+    margin-top: 0;
+    text-align: left;
+  }
+  .content {
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 21px;
+    letter-spacing: 0px;
+    color: #767e86;
+    text-align: left;
+  }
 }
