--- a/react_webviews/src/dashboard/PassiveIndexFunds/style.scss
+++ b/react_webviews/src/dashboard/PassiveIndexFunds/style.scss
@@ -25,9 +25,6 @@
 }
 
 .react-responsive-carousel {
-  // margin: "0 0 0 0";
-  // cursor: "pointer";
-  // height: 500px;
   width: 100%;
   margin-bottom: 45px;
 }
@@ -35,22 +32,46 @@
 .educational-video-block {
   background-color: #002576;
   color: white;
-  // padding: -20px;
-  // position: absolute;
   width: 100%;
   padding-bottom: 20px;
-  // left: 0;
-  // top: 0;
-  // height: 400px;
   p{
     margin: 0;
     padding: 0;
   }
+  .info-container{
+    width: "100%";
+    display: "flex";
+    justify-content: "space-around";
+    align-items: "center";
+    padding: "30px 0px";
+    p{
+      color: #94C5FF;
+      font-size: 13px;
+      font-weight: 400;
+      line-height: 21px;
+      letter-spacing: 0px;
+      text-align: center;
+    }
+    .info-block{
+      width: 60px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      div{
+        width: 60px;
+        height: 60px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+        background-image: radial-gradient(50% 50% at 50% 50%, rgba(0, 33, 72, 0.06) 0%, rgba(255, 255, 255, 0.06) 100%);
+        margin-bottom: 10px;
+      }
+    }
+  }
 }
 
 .player-wrapper {
-//   position: relative;
-//   padding-top: 56.25%;
   padding: 0px 20px;
 
 }
@@ -69,8 +90,6 @@
 // }
 
 .play-info {
-  // top: 238px !important;
-  // width: 100% !important;
   max-height: 150px !important;
   width: auto;
 }
