--- a/react_webviews/src/dashboard/PassiveIndexFunds/mini-components/commonStyles.scss
+++ b/react_webviews/src/dashboard/PassiveIndexFunds/mini-components/commonStyles.scss
@@ -228,6 +228,7 @@
   background-position: center;
   background-size: cover;
   padding: 20px 20px;
+  min-height: 116px;
   .title {
     font-size: 15px;
     font-weight: 600;
