--- a/react_webviews/src/dashboard/PassiveIndexFunds/style.scss
+++ b/react_webviews/src/dashboard/PassiveIndexFunds/style.scss
@@ -40,6 +40,11 @@
     padding: 0;
   }
   .info-container{
+     width: 100%;
+     display: flex;
+     justify-content: space-around;
+     align-items: center;
+     padding: 30px 0px;
     p{
       color: #94C5FF;
       font-size: 13px;
@@ -88,4 +93,12 @@
 .play-info {
   max-height: 150px !important;
   width: auto;
+}
+
+.content-main{
+  padding: 10px 20px !important;
+  background-color: white;
+  z-index: 1;
+  border-radius: 7px;
+  margin-top: -25px !important;
 }
