--- a/react_webviews/src/common/ui/Filter/commonStyles.scss
+++ b/react_webviews/src/common/ui/Filter/commonStyles.scss
@@ -1,47 +1,7 @@
-.MuiFormControlLabel-root{
-    margin-top: 10px;
-    margin-bottom: 10px;
-
- .fc-title{
-    position: relative;
-    line-height: 21px;
-    font-weight: normal;
-    font-size: 16px;
-    color: #161A2E;
-    width: 100vw;
-    margin-left: 5px;
-    margin-bottom: 10px;
-   }
-
- .fc-subtitle{
-    position : absolute;
-    margin-top: 5px;
-    color: #767E86;
-    font-size: 13px;
-    line-height: 18px;
-  }
-}
-
-.filter-buttons {
-//   padding: 20px;
-  .FlexButton {
-    display: flex;
-    justify-content: space-around;
-    position: absolute;
-    bottom: 10px;
-    width: 100%;
-    margin-left: 20px;
-    button {
-      width: 35%;
-    }
-    button:first-child{
-        background-color: white;
-    }
-  }
-}
+// Filter Bottom Sheet
 .filter-bottom-sheet {
-    position: relative;
-    min-height: 375px !important;
+  position: relative;
+  min-height: 375px !important;
   .heading {
     font-size: 20px;
     font-weight: 700;
@@ -49,22 +9,95 @@
     letter-spacing: 0px;
   }
   .filter {
-      .body{
-          height: 340px !important;
-          .diy-sort-filter div label:last-child{
-              margin-bottom: 70px;
-          }
+    .body {
+      height: 340px !important;
+      .diy-sort-filter div label:last-child {
+        margin-bottom: 70px;
       }
+      .MuiFormControlLabel-root {
+        margin-top: 10px;
+        margin-bottom: 10px;
+        margin-left: 0px;
+        .MuiSvgIcon-root {
+          fill: #3792fc;
+        }
+        .MuiCheckbox-root {
+          left: 0;
+        }
+        .fc-title {
+          position: relative;
+          line-height: 21px;
+          font-weight: normal;
+          font-size: 16px;
+          color: #161a2e;
+          width: 100%;
+          margin-left: 5px;
+        }
+
+        .fc-subtitle {
+          position: absolute;
+          margin-top: 5px;
+          color: #767e86;
+          font-size: 13px;
+          line-height: 18px;
+          min-width: 100px;
+        }
+      }
+    }
     .title {
       .notselected {
         background-color: transparent !important;
-        color: #767E86;
+        color: #767e86;
       }
       background-color: transparent !important;
       background-image: linear-gradient(
         rgba(223, 223, 223, 0.3),
         rgba(255, 255, 255, 0)
       );
+    }
+  }
+  .filter-buttons {
+    //   padding: 20px;
+    .FlexButton {
+      display: flex;
+      justify-content: space-around;
+      position: absolute;
+      bottom: 10px;
+      width: 100%;
+      margin-left: 20px;
+      button {
+        width: 35%;
+      }
+      button:first-child {
+        background-color: white;
+      }
+    }
+  }
+}
+
+// Filter Button
+.diy-cart-footer {
+  .filter-toggle-button {
+    background-color: white;
+    width: 140px;
+    padding: 13px 0;
+    border: none;
+    border-radius: 4px;
+    border: 1px solid rgba(255, 255, 255, 0.43);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    img {
+      padding-right: 10px;
+    }
+    p {
+      font-size: 12px;
+      font-weight: 700;
+      line-height: 14px;
+      letter-spacing: 1px;
+      text-align: center;
+      color: #35CB5D;
+      text-transform: uppercase;
     }
   }
 }
