Fixed margin issue in WVInfoBubble

--- a/react_webviews/src/common/ui/InfoBubble/WVInfoBubble.scss
+++ b/react_webviews/src/common/ui/InfoBubble/WVInfoBubble.scss
@@ -18,21 +18,21 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      margin-bottom: 10px;
-
+      
       span {
         font-weight: 600;
         font-size: 13px;
         line-height: 21px;
       }
     }
-
+    
     .wv-ib-content-desc {
       text-align: left;
       font-size: 13px;
       line-height: 21px;
       color: var(--steelgrey);
       word-break: break-word;
+      margin-top: 10px;
     }
   }
 }
