--- a/react_webviews/src/reports/components/mini-components/mini-components.scss
+++ b/react_webviews/src/reports/components/mini-components/mini-components.scss
@@ -14,8 +14,9 @@
     justify-content: flex-end;
 
     button {
-      min-height: 40px;
       min-width: 100px;
+      font-size: 12px;
+      font-weight: bold;
       background-color: var(--secondary);
       color: white;
     }
