--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1450,7 +1450,7 @@ padding-right: 14px !important;
       .subtitle {
         color: #8D879B;
         font-size: 11px;
-        margin: 20px 0 20px 0;
+        margin: 20px 0 16px 0;
         line-height: 18px;
       }
     }
@@ -1471,8 +1471,8 @@ padding-right: 14px !important;
       font-size: 10px;
       line-height: 16px;
       font-weight: 500;
-      margin: 0 0 7px 0;
-      // font-family: Rubik;
+      margin: 0px 0 5px 0;
+      padding-top: 10px;
       font-style: normal;
       letter-spacing: 1px;
     }
@@ -1485,6 +1485,7 @@ padding-right: 14px !important;
       color: #767E86;
       line-height: 21px;
       font-size: 13px;
+      margin-top: -14px;
     }
     .color{
       color: #7ED321 !important;
@@ -1528,6 +1529,7 @@ p {
 }
 
 .amc-logo-small{
-
+  width: 50px;
+  height: 50px;
 }
 // --------------------------------Passive Index Style-End----------------------------------- //
