--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1530,10 +1530,9 @@ p {
 .amc-logo-small{
 
 }
-// --------------------------------Passive Index Style-End----------------------------------- //
 
-// Active Passive Carousel 
-.active-passive-carousel {
+// generic fact carousel
+.generic-fact-carousel {
   background-image: url("../../assets/active_passive_background.svg");
   width: 100%;
   object-fit: cover;
@@ -1602,8 +1601,8 @@ p {
   }
 }
 
-// Key Insights Carousel
-.key-insight-carousel {
+// generic content carousel
+.generic-content-carousel {
   background-image: url("../../assets/passiveFundKeyInsights.svg");
   width: 100%;
   object-fit: cover;
@@ -1629,5 +1628,20 @@ p {
     letter-spacing: 0px;
     color: #767e86;
     text-align: left;
+  }
+}
+
+// Accordian styles
+.generic-accordian{
+  display: "flex";
+  justify-content: "space-between";
+  align-items: "center";
+  cursor: "pointer";
+  padding: "0 20px";
+  p{
+      font-size: "15px";
+      font-weight: "700";
+      line-height: "24px";
+      letter-spacing: "0px";
   }
 }
