--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1732,15 +1732,15 @@ p {
 
 // Accordian styles
 .generic-accordian{
-  display: "flex";
-  justify-content: "space-between";
-  align-items: "center";
-  cursor: "pointer";
-  padding: "0 20px";
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+  padding: 0 20px;
   p{
-      font-size: "15px";
-      font-weight: "700";
-      line-height: "24px";
-      letter-spacing: "0px";
+      font-size: 15px;
+      font-weight: 700;
+      line-height: 24px;
+      letter-spacing: 0px;
   }
 }
