--- a/react_webviews/src/kyc/Equity/components/commonStyles.scss
+++ b/react_webviews/src/kyc/Equity/components/commonStyles.scss
@@ -1,9 +1,3 @@
-$generic-subtitle-margin-top: -10px;
-
-.generic-page-subtitle {
-  margin-top: $generic-subtitle-margin-top;
-}
-
 @mixin d-flex {
   display: flex;
 }
@@ -76,7 +70,7 @@ $generic-subtitle-margin-top: -10px;
   }
 
   .te-selected-tile {
-    color: #161a2e;
+    color: var(--dark);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -112,7 +106,7 @@ $generic-subtitle-margin-top: -10px;
     font-weight: bold;
     font-size: 20px;
     line-height: 32px;
-    color: #161a2e;
+    color: var(--dark);
     padding-bottom: 20px;
 
     .kaih-text {
@@ -171,7 +165,7 @@ $generic-subtitle-margin-top: -10px;
       .kaim-fees-info-text {
         font-size: 13px;
         line-height: 21px;
-        color: #161a2e;
+        color: var(--dark);
 
         .kaim-fees-info-subtext {
           font-size: 11px;
@@ -219,7 +213,7 @@ $generic-subtitle-margin-top: -10px;
   .spi-text {
     font-size: 13px;
     line-height: 21px;
-    color: #000000;
+    color: var(--dark);
     padding-bottom: 10px;
   }
 
@@ -238,7 +232,7 @@ $generic-subtitle-margin-top: -10px;
     font-weight: bold;
     font-size: 20px;
     line-height: 32px;
-    color: #161a2e;
+    color: var(--dark);
     padding-bottom: 20px;
   }
 
@@ -267,7 +261,7 @@ $generic-subtitle-margin-top: -10px;
       column-gap: 20px;
 
       .kdvm-next-step-text {
-        color: #161a2e;
+        color: var(--dark);
         font-weight: 600;
         font-size: 13px;
         line-height: 21px;
@@ -302,6 +296,10 @@ $generic-subtitle-margin-top: -10px;
 
 
 #manual-signature {
+  .manual-signature-subtile {
+    margin-top: -10px;
+  }
+
   .page-content {
     margin-top: 25px;
     margin-bottom: 30px;
