--- a/react_webviews/src/kyc/Equity/mini-components/mini-components.scss
+++ b/react_webviews/src/kyc/Equity/mini-components/mini-components.scss
@@ -1,37 +1,3 @@
-$title-font-size: 20px;
-$subtitle-color: #767E86;
-
-@mixin page-title {
-  font-size: $title-font-size;
-  font-weight: 700;
-  line-height: 32px;
-}
-
-@mixin page-subtitle {
-  color: $subtitle-color;
-  font-size: 13px;
-  font-weight: 400;
-  line-height: 21px;
-}
-
-.status-info {
-  text-align: center;
-
-  .status-info-img {
-    max-width: 100%;
-    // min-height: 90px;
-  }
-
-  .status-info-title {
-    @include page-title();
-    margin: 30px 0 10px 0;
-  }
-
-  .status-info-subtitle {
-    @include page-subtitle();
-  }
-}
-
 .kyc-selfie-upload-status {
   .kyc-selfie-upload-status-content {
     .kyc-selfie-upload-status-info {
@@ -53,7 +19,7 @@ $subtitle-color: #767E86;
         font-size: 13px;
         line-height: 21px;
         width: 95%;
-        color: #767e86;
+        color: var(--steelgrey);;
         padding-bottom: 35px;
       }
     }
