--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -15,7 +15,7 @@
 @mixin fadein-animation-base {
   animation: container-animation-fadein ease 0.15s; 
   // animation: container-animation-left-to-right ease 0.2s;
-
+  
   animation-iteration-count: 1; 
   animation-fill-mode: forwards;
 }
@@ -36,9 +36,13 @@ body[data-device="web"] #root {
   background: #f3f4f6;
 }
 
+button {
+  font-family: "Rubik", "Roboto", sans-serif;
+}
+
 body[data-device="web"] {
   height: 100%;
-
+  
   .generic-error-dialog .overlay {
     max-width: var(--desktop-width);
     margin: 0 auto;
@@ -55,17 +59,17 @@ body[data-device="web"] {
   .MuiAppBar-positionFixed {
     left: 0 !important;
   }
-
+  
   .FlexItem1-withProvider-footer .text-block-1 {
     width: auto;
   }
-
+  
   .Header {
     max-width: var(--desktop-width);
     margin: 0 auto;
     box-shadow: none;
   }
-
+  
   .Footer {
     max-width: fit-content;
     position: relative !important;
@@ -257,7 +261,6 @@ body[data-device="web"] .Container {
   margin-bottom: 15px;
   color: rgb(68, 68, 68);
   font-size: 14px;
-  font-family: "Roboto";
   font-weight: 500;
 }
 
@@ -355,7 +358,6 @@ button {
   color: #ffffff;
   font-size: 14px;
   font-weight: 500;
-  font-family: "Roboto";
 }
 
 .FooterSummaryLayout_hint {
@@ -460,7 +462,7 @@ button {
   line-height: 20px;
 }
 .fyntune-landing{
-  font-family: "Roboto", sans-serif;
+  font-family: "Rubik", "Roboto", sans-serif;
 }
 .fyntune-heading {
   font-size: 17px;
@@ -545,7 +547,6 @@ button {
   font-size: 18px;
   color: #79838F;
   line-height: 25px;
-  font-family: "Roboto";
 }
 
 .resume-card {
@@ -609,7 +610,6 @@ input#pan {
   padding: 20px 0;
   color: #444;
   font-size: 14px;
-  font-family: "Roboto";
   font-weight: 500;
 }
 
@@ -942,7 +942,6 @@ input#pan {
   color: rgb(74, 74, 74);
   margin-top: 0;
   font-size: 20px;
-  font-family: "Roboto";
   font-weight: 500;
   text-align: center;
 }
@@ -952,7 +951,6 @@ input#pan {
   margin-top: 10px;
   margin-bottom: 0;
   font-size: 16px;
-  font-family: "Roboto";
   text-align: center;
 }
 
@@ -1467,7 +1465,7 @@ $header-title-font-size: 20px;
   width: 100%;
   border: 1px solid #aaa;
   background-color: #fff;
-  font-family: Helvetica, sans-serif;
+  font-family: "Rubik", "Roboto", sans-serif;
   font-weight: 300;
   font-size: 16px;
   border-bottom-left-radius: 4px;
