--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -125,7 +125,7 @@
 .RadioLabel {
   color: var(--label);
   font-size: 14px;
-  font-family: "Roboto";
+  font-family: "Rubik", "Roboto", sans-serif;
   font-weight: 500;
 }
 .RadioWithIcon {
@@ -166,7 +166,7 @@
   text-align: left;
   margin-top: 8px;
   min-height: 1em;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-family: "Rubik", "Roboto", sans-serif;
   line-height: 1em;
   color: #f44336;
   position: relative;
@@ -727,7 +727,7 @@ body[data-device="mobile"] {
   text-align: left;
   margin-top: 8px;
   min-height: 1em;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-family: "Rubik", "Roboto", sans-serif;
   line-height: 1em;
   margin-bottom: 10px;
   position: relative;
