--- a/react_webviews/src/loan_idfc/components/Style.scss
+++ b/react_webviews/src/loan_idfc/components/Style.scss
@@ -11,7 +11,7 @@
       margin: 10px 0 0px 0;
       position: absolute;
       top: 5%;
-      font-weight: 800;
+      font-weight: 700;
     }
     .button {
       position: absolute;
@@ -27,7 +27,7 @@
     .bottom-content {
       color: white;
       font-size: 8px;
-      font-weight: 800;
+      font-weight: 700;
       // margin: 50px 0 0 0;
       bottom: 20px;
       position: absolute;
@@ -148,7 +148,7 @@
   }
 
   .amount-inr {
-    font-weight: 900;
+    font-weight: 700;
     font-size: 20px;
     text-align: center;
     color: var(--primary);
@@ -436,7 +436,7 @@
 
   .generic-page-button-small {
     margin-right: 20px;
-    font-weight: 800 !important;
+    font-weight: 700 !important;
     padding: 12px 30px !important;
     letter-spacing: 1px;
   }
@@ -542,7 +542,7 @@
     text-align: left;
     margin-top: 8px;
     min-height: 1em;
-    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-family: "Rubik", "Helvetica", "Arial", sans-serif;
     line-height: 1em;
     margin-bottom: 10px;
     color: var(--primary);
@@ -585,7 +585,7 @@
   .head-title {
     color: #160d2e;
     font-size: 20px;
-    font-weight: 800;
+    font-weight: 700;
     margin-top: 30px;
   }
 
@@ -1086,7 +1086,7 @@
     }
 
     .top-title {
-      font-weight: 800;
+      font-weight: 700;
       font-size: 17px;
       margin-bottom: 20px;
     }
@@ -1183,7 +1183,7 @@
       color: #ffffff;
       background: var(--secondary) !important;
       border-radius: 4px;
-      font-weight: 800;
+      font-weight: 700;
     }
   }
 
