--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -461,6 +461,14 @@ button {
 }
 .fyntune-landing{
   font-family: "Roboto", sans-serif;
+  .rct-subtitle-frequency{
+    font-size: 20px;
+    font-weight: 400;
+  }
+  .rct-subtitle-frequency-value{
+    font-size: 16px;
+    font-weight: 300; 
+  }
 }
 .fyntune-heading {
   font-size: 17px;
