bottomfilter + toast + css fix

--- a/react_webviews/src/dashboard/PassiveIndexFunds/style.scss
+++ b/react_webviews/src/dashboard/PassiveIndexFunds/style.scss
@@ -24,6 +24,12 @@
     cursor: pointer;
   }
 }
+.fund-number{
+  color: #767E86;
+  line-height: 16px;
+  font-size: 10px;
+  font-weight: 400;
+}
 
 .react-responsive-carousel {
   width: 100%;
