--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1564,7 +1564,7 @@ padding-right: 12px !important;
     }
     .star-icon{
       position: absolute;
-      margin-top: 2px;
+      margin-top: 0.5px !important;
     }
     .tc-title {
       color: #767E86;
