--- a/react_webviews/src/group_insurance/common/Style.scss
+++ b/react_webviews/src/group_insurance/common/Style.scss
@@ -420,6 +420,7 @@
   color: #160d2e;
    font-size: 14px;
    margin-bottom: 10px;
+   margin-left: 10px;
    font-weight: 500;
 }
 .accident-plan-claim-subtitle {
@@ -667,6 +668,8 @@
   padding: 10px;
   border-radius: 3px;
   margin-right: 15px;
+  width: 78px;
+  min-height: 64px !important;
 }
 .report-detail-summary {
   margin-top: 30px;
@@ -693,6 +696,7 @@
 }
 .report-detail-download-text {
   color: var(--secondary);
+  margin-left: 10px;
   font-size: 14px;
   font-weight: 400;
 }
@@ -942,6 +946,10 @@
 
   .bototm-design {
       margin: 0 0 20px 0;
+      .bf-img{
+        width: 30px !important;
+        height: 30px !important;
+      }
   }
   .settlement-info {
     font-size: 13px;
@@ -1115,6 +1123,24 @@
 .MuiDialogActions-root{
   text-align: right;
 }
+
+.group-health-report-details{
+  .member-tile{
+    .imgc-tile{
+      width: 30px !important; 
+      height: 30px !important;
+    }
+    .imgc-tile1{
+      width: 88px !important; 
+      height: 20px !important;
+    }
+    .imgc-tile2{
+      width: 88px !important; 
+      height: 20px !important;
+    }
+  }
+}
+
 .group-health-final-summary {
   .member-tile {
       display: flex;
@@ -1189,9 +1215,17 @@
     }
   }
 }
+.final-summary-medical-review-img{
+  width: 115px !important;
+  min-height: 80px !important; 
+}
 
 .group-health-life-insurance{
   .member-tile-fyntune {
+    .imgc-tile{
+      width: 30px !important;
+      height: 30px !important;
+    }
     display: flex;
     margin: 15px 0 15px 0;
     .mt-right-fyntune {
@@ -1218,6 +1252,7 @@
       text-transform: capitalize;
    }
   }
+  
 }
 
 .group-health-bmi-dialog {
@@ -1445,6 +1480,8 @@
     position: absolute;
     right: 6%;
     bottom:10%;
+    width: 100px; 
+    height: 82px;
   }
   .hi-landing-banner-header{
     font-size: calc(20px + 0.5vw);
