Minor styling fixes for WVButton, WVFullScreenDialog

--- a/react_webviews/src/common/ui/FullscreenDialog/WVFullscreenDialog.scss
+++ b/react_webviews/src/common/ui/FullscreenDialog/WVFullscreenDialog.scss
@@ -10,7 +10,7 @@
     box-sizing: border-box !important;
 
     .MuiDialogActions-action {
-      margin: 0 !important;
+      margin: 0;
     }
   }
 }
