Added campaign callback

--- a/react_webviews/src/dashboard/Invest/commonStyles.scss
+++ b/react_webviews/src/dashboard/Invest/commonStyles.scss
@@ -87,3 +87,13 @@
     }
   }
 }
+
+.page-campaign-callback {
+  text-align: center;
+  font-size: 16px;
+  
+  .page-campaign-callback-titile {
+    font-size: 30px;
+    margin: 20px 0;
+  }
+}
