Added blob coversion for images + camera permission checks for selfie

--- a/react_webviews/src/kyc/Upload/commonStyles.scss
+++ b/react_webviews/src/kyc/Upload/commonStyles.scss
@@ -475,13 +475,17 @@
 }
 // F&OIncomeProof END ------------
 
+// ------ WebcamSelfie -----------
 .webcam-selfie {
   text-align: center;
+  
+  .wv-ip-title {
+    margin-bottom: 60px;
+  }
 
   video {
     height: 300px;
     object-fit: cover;
-    margin-top: 60px;
     border-radius: 50%;
     width: 300px;
     // transform: scaleX(-1);
@@ -491,3 +495,4 @@
 .webcam-selfie-btn {
   margin: auto !important;
 }
+// ------------------------------
